--- a/WebApplication2/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/WebApplication2/Views/Shared/_Layout.cshtml
@@ -21,13 +21,11 @@
                     <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Login", "Login", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("CreateAccount", "Create", "Users", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Department", "Index", "Departments", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Role", "Index", "Roles", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Categories", "Index", "Categories", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Submisson", "Index", "Topics", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Staff Submisson", "Index", "StaffTopics", new { area = "" }, new { @class = "nav-link" })</li>
-
+                   
+                    @*<li>
+                        @{ var admin = HttpContext.Current.Session["admin"].ToString();
+                            <span> @admin</span> }
+                    </li>*@
                 </ul>
             </div>
         </div>
