--- a/WebApplication2/WebApplication2/Areas/Admin/Views/HomeAdmin/Index.cshtml
+++ b/WebApplication2/WebApplication2/Areas/Admin/Views/HomeAdmin/Index.cshtml
@@ -52,7 +52,7 @@
                 <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1000" data-aos-easing="ease" data-aos-delay="2600" href="@Url.Action("Index", "Roles", new { area = "Admin" })">Role</a>
                 <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1000" data-aos-easing="ease" data-aos-delay="2900" href="@Url.Action("Index", "Categories", new { area = "Admin" })">Catergories</a>
                 <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1000" data-aos-easing="ease" data-aos-delay="3200" href="@Url.Action("Contact", "Home", new { area = "" })">Contact </a>
-                <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1000" data-aos-easing="ease" data-aos-delay="3500" href="@Url.Action("Index", "Account", new { area = "Admin" })">Account</a>
+                <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1000" data-aos-easing="ease" data-aos-delay="3500" href="@Url.Action("Index", "Users", new { area = "Admin" })">Account</a>
                 <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1000" data-aos-easing="ease" data-aos-delay="3800" href="@Url.Action("Index", "Departments", new { area = "Admin" })">Department</a>
                 <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1000" data-aos-easing="ease" data-aos-delay="4100" href="@Url.Action("Index", "Topics", new { area = "Admin" })">Submission</a>
             </nav>
