--- a/WebApplication2/WebApplication2/Areas/Default/Views/HomeDefaults/Index.cshtml
+++ b/WebApplication2/WebApplication2/Areas/Default/Views/HomeDefaults/Index.cshtml
@@ -87,7 +87,7 @@
                     <a href="@Url.Action("Details", "UsersDefault", new { area = "Default" })" class="user-link cursor-scale small">Coordinator</a>
                     <div class="dropdown-content">
                         <a class="cursor-scale small" href="@Url.Action("Details", "UsersDefault", new { area = "Default" })">Account profile</a>
-                        <a class="cursor-scale small" href="@Url.Action("Edit", "UsersDefault", new { area = "Default" })">Update profile</a>
+                        <a class="cursor-scale small" href="@Url.Action("Edit", "UsersDefault", new { area = "Default", id = accountRole.Id })">Update profile</a>
                         <a class="cursor-scale small" href="~/Home/Logout">Logout</a>
                     </div>
                 </div>
