--- a/WebApplication2/WebApplication2/Areas/Default/Views/UsersDefault/Edit.cshtml
+++ b/WebApplication2/WebApplication2/Areas/Default/Views/UsersDefault/Edit.cshtml
@@ -2,69 +2,315 @@
 
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Areas/Default/Views/Shared/_LayoutDefault.cshtml";
+    /* Layout = "~/Areas/Default/Views/Shared/_LayoutDefault.cshtml";*/
+    Layout = null;
 }
 
-<h2>Edit</h2>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>User</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - My ASP.NET Application</title>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Fullname, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Fullname, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Fullname, "", new { @class = "text-danger" })
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="icon"
+          href="/Content/Frontend/Images/bulding.svg"
+          type="image/svg"
+          sizes="32x32" />
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    @{
+        var accountRole = (WebApplication2.Models.User)HttpContext.Current.Session["user"];
+        if (accountRole.RoleId == "Coordinator")
+        {
+            <link rel="stylesheet" href="/Content/Frontend/layoutCoordinator.css" />
+        }
+        else
+        {
+            <link rel="stylesheet" href="/Content/Frontend/layoutDefault.css" />
+        }
+    }
+
+
+    <title>Homepage</title>
+</head>
+<body>
+
+    <!---- BackGround Loader ---->
+
+    <video class="loader_bg" image.png muted autoplay loop>
+        <source src="/Content/Frontend/Images/Preloading.mp4" type="video/mp4" ">
+    </video>
+
+    <!--Cursor GSAP -->
+    <div class="cursor"></div>
+
+    <!---- Header --->
+
+    @{
+        accountRole = (WebApplication2.Models.User)HttpContext.Current.Session["user"];
+        if (accountRole.RoleId == "Coordinator")
+        {
+            <header data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="2300">
+                <div class="inner">
+                    <div class="logo cursor-scale small" data-aos="fade-in" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="3800">
+                        <img src="/Content/Frontend/Images/Remove_Gif_BackGround.gif" alt="Kawaii-logo" />
+                    </div>
+                    <div class="burger"></div>
+                    <nav>
+                        <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="3500" href="@Url.Action("Index", "DepartmentsDefault", new { area = "Default" })">Department</a>
+                        <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="3200" href="@Url.Action("Index", "HomeDefaults", new { area = "Default" })">Homepage</a>
+                        <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="2900" href="@Url.Action("Index", "StaffTopicsDefault", new { area = "Default" })">Staff Submission</a>
+                        <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="2600" href="@Url.Action("MusicPlayer", "HomeDefaults", new { area = "Default"})">Music Player</a>
+                        <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="2900" href="@Url.Action("Index", "ListIdeasDefault", new { area = "Default" })">Rating idea</a>
+                        <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="3200" href="@Url.Action("About", "HomeDefaults", new { area = "Default"})">About</a>
+                        <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="3500" href="@Url.Action("Index", "StatisticsDefault", new { area = "Default" })">Statistics</a>
+                        @*
+                            <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="3500" href="@Url.Action("Index", "HomeDefaults", new { area = "Default" })">Homepage</a>
+                            <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="3200" href="@Url.Action("Index", "StaffTopicsDefault", new { area = "Default" })">StaffSubmission</a>
+                            <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="2900" href="@Url.Action("MusicPlayer", "HomeDefaults", new { area = "Default"})">Music Player</a>
+                            <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="2600" href="@Url.Action("About", "HomeDefaults", new { area = "Default"})">AboutPage</a>
+                            <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="2900" href="@Url.Action("Index", "ListIdeasDefault", new { area = "Default" })">Rating idea</a>
+                            <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="3200" href="@Url.Action("Index", "StatisticsDefault", new { area = "Default" })">Statistics</a>
+                            <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="3500" href="@Url.Action("Index", "DepartmentsDefault", new { area = "Default" })"> YourDepartment</a>
+                        *@
+                    </nav>
+
+                    <div class="dropdown">
+                        <a href="#" class="user-link cursor-scale small">Coordinator</a>
+                        <div class="dropdown-content">
+                            <a class="cursor-scale small" href="#">Account profile</a>
+                            <a class="cursor-scale small" href="#">Update profile</a>
+                            <a class="cursor-scale small" href="~/Home/Logout">Logout</a>
+                        </div>
+                    </div>
+
+                </div>
+            </header>
+        }
+        else
+        {
+            <header data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="2300">
+                <div class="inner">
+                    <div class="logo cursor-scale small" data-aos="fade-in" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="3800">
+                        <img src="/Content/Frontend/Images/Remove_Gif_BackGround.gif" alt="Kawaii-logo" />
+                    </div>
+                    <div class="burger"></div>
+                    <nav>
+                        <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="3200" href="@Url.Action("Index", "HomeDefaults", new { area = "Default" })">Homepage</a>
+                        <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="2900" href="@Url.Action("MusicPlayer", "HomeDefaults", new { area = "Default"})">Music Player</a>
+                        <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="2600" href="@Url.Action("Index", "StaffTopicsDefault", new { area = "Default" })">Staff Submission</a>
+                        <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="2900" href="@Url.Action("Index", "ListIdeasDefault", new { area = "Default" })">Rating idea</a>
+                        <a class="border-underline cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="3200" href="@Url.Action("About", "HomeDefaults", new { area = "Default" })">About Page</a>
+
+
+                    </nav>
+
+                    <div class="dropdown">
+                        @{ var account = (WebApplication2.Models.User)HttpContext.Current.Session["user"]; }
+                        <a href="#" class="user-link cursor-scale small">Welcome, @account.Fullname</a>
+                        <div class="dropdown-content">
+                            <a class="cursor-scale small" href="#">Account profile</a>
+                            <a class="cursor-scale small" href="#">Update profile</a>
+                            <a class="cursor-scale small" href="~/Home/Logout">Logout</a>
+                        </div>
+                    </div>
+
+                </div>
+            </header>
+        }
+
+
+    }
+
+
+
+
+
+
+
+    <!--  BODY -->
+    <main>
+        <div id="slider" data-aos="fade-up" data-aos-duration="1400" data-aos-easing="ease" data-aos-delay="3400">
+            <div class="slider-inner">
+                <div id="slider-content" data-aos-unset="opacity visibility" data-aos="fade-right" data-aos-duration="500" data-aos-easing="ease" data-aos-delay="3800">
+                    <!-- Upper Slider Content  -->
+                    <div class="meta cursor-scale small" data-aos="fade-down" data-aos-duration="1200" data-aos-easing="ease" data-aos-delay="2300">Staffs</div>
+                    <h2>Edit</h2>
+                    <header>
+                        <div class="inner">
+                            <nav>    <a class="border-underline cursor-scale small" href="/Default/TopicsDefault/Details">Back To Detail</a> </nav>
+                        </div>
+                    </header>
+                </div>
+                <!--Edit form-->
+               
+
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="form-horizontal">
+                        <h4>User</h4>
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.HiddenFor(model => model.Id)
+
+                    <div class="form-group">
+                        <h4 class="MyH4">FullName</h4>
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Fullname, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Fullname, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <h4 class="MyH4">RoleId</h4>
+                        <div class="col-md-10">
+                            @Html.DropDownList("RoleId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.RoleId, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <h4 class="MyH4">DepartmentId</h4>
+                        <div class="col-md-10">
+                            @Html.DropDownList("DepartmentId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <h4 class="MyH4">Email</h4>
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <h4 class="MyH4">Password</h4>
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div>
+                        <div>
+                            <input type="submit" value="Save" class="btn btn-default" style="height:40px; width:70px; margin-top:10px;" />
+                        </div>
+                    </div>
+
+                    </div>
+                }
+
+
+
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.RoleId, "RoleId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("RoleId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.RoleId, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DepartmentId, "DepartmentId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("DepartmentId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    </main>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+
+
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
+    <script src="/Scripts/Fronend/HomePageDefault.js"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-40525870-5');
+
+        AOS.init();</script>
+
+
+
+</body>
+</html>
+
+
+
+
+
+
+
+@*
+    <h2>Edit</h2>
+
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="form-horizontal">
+            <h4>User</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Fullname, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Fullname, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Fullname, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.RoleId, "RoleId", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("RoleId", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.RoleId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.DepartmentId, "DepartmentId", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("DepartmentId", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
             </div>
         </div>
+    }
+
+    <div>
+        @Html.ActionLink("Back to Detail", "Details")
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to Detail", "Details")
-</div>
+*@
