--- a/WebApplication2/WebApplication2/Areas/Default/Views/StaffTopicsDefault/Index.cshtml
+++ b/WebApplication2/WebApplication2/Areas/Default/Views/StaffTopicsDefault/Index.cshtml
@@ -86,8 +86,8 @@
                     <div class="dropdown">
                         <a href="#" class="user-link cursor-scale small">Coordinator</a>
                         <div class="dropdown-content">
-                            <a class="cursor-scale small" href="#">Account profile</a>
-                            <a class="cursor-scale small" href="#">Update profile</a>
+                            <a class="cursor-scale small" href="@Url.Action("Details", "UsersDefault", new { area = "Default" })">Account profile</a>
+                            <a class="cursor-scale small" href="@Url.Action("Edit", "UsersDefault", new { area = "Default", id = accountRole.Id })">Update profile</a>
                             <a class="cursor-scale small" href="~/Home/Logout">Logout</a>
                         </div>
                     </div>
