--- a/WebApplication2/WebApplication2/Views/Home/Contact.cshtml
+++ b/WebApplication2/WebApplication2/Views/Home/Contact.cshtml
@@ -128,7 +128,7 @@
                              class="input-box cursor-scale small">
                             <input id="accountName" name="accountName" type="text" value=""  required="required">
 
-                            <label>[ID Account]</label>
+                            <label>[FullName]</label>
                         </div>
                         <div data-aos="fade-up"
                              data-aos-duration="1200"
